--- a/default.css
+++ b/default.css
@@ -59,9 +59,9 @@
 		margin: 0em auto;
 		width: 1200px;
 	}
-	
+
 /*********************************************************************************/
-/* Image Style                                                                   */
+/* Image Styles                                                                   */
 /*********************************************************************************/
 
 	.image
@@ -498,7 +498,6 @@
 		width: 800px;
 		padding: 3em 50px 5em 50px;
 		background: #FFF;
-		border-top: 6px solid #2980b9;
 		text-align: center;
 	}
 
