--- a/default.css
+++ b/default.css
@@ -557,6 +557,13 @@
 		border-top: 1px solid rgba(0,0,0,0.08);
 	}
 
+	#empty
+	{
+		overflow: hidden;
+		margin-bottom: 3em;
+		border-top: 1px solid rgba(0,0,0,0.08);
+	}
+
 	#copyright span
 	{
 		display: block;
