--- a/default.css
+++ b/default.css
@@ -162,7 +162,7 @@
 	{
 		float: left;
 		position: relative;
-		width: 80px;
+		width: 7em;
 		height: 70px;
 		margin: 0.5em 1.5em 0em 0.5em;
 		padding: 1.5em 0em 1.5em 0em;
